# pdf-summary

./: .env.example  .gitignore  Cargo.toml
src/: lib.rs
src/cli/: main.rs
