[package]
name = "pdf-summary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pdfsum"
path = "src/cli/main.rs"

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
reqwest = "0.11.17"
async-openai = "0.10.3"
clap = { version = "4.2.7", features = ["derive"] }
dotenvy = "0.15.7"
anyhow = "1.0.71"
log = "0.4"
env_logger = "0.10.0"
pdf-extract = "0.6.5"
tiktoken-rust = "0.2.0"
#llm-chain = "0.11.1"
#llm-chain-openai = "0.11.1"
